fix: 예약좌석 다중컬럼 테이블 분리